2009-09-11  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.Ide.Gui/Document.cs: Added DocumentParsed event.

2009-09-10  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.Ide.CodeTemplates/CodeTemplate.cs:
	* MonoDevelop.Ide.CodeTemplates/ExpansionObject.cs: Worked on
	  template formatting.

2009-09-09  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.Ide.Execution/MonoExecutionParameters.cs: Added
	  some localized descriptons for some property values.

2009-09-09  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.Ide.Execution/MonoExecutionParameters.cs: Using
	  localizable attributes for mono execution parameters.

2009-09-09  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.Ide.Gui.Dialogs/CustomExecutionModeDialog.cs:
	  Added missing getstring call.

	* gtk-gui/MonoDevelop.Ide.Gui.Dialogs.EncapsulateFieldDialog.cs:
	  Fixed translation.

2009-09-09  Mike Krüger  <mkrueger@novell.com>

	* gtk-gui/gui.stetic:
	* MonoDevelop.Ide.Gui.Dialogs/EncapsulateFieldDialog.cs: Fixed
	  dialog title.

2009-09-09  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.Ide.addin.xml: Added missing "..." to menu
	  items.

2009-09-08  Christian Hergert  <chris@dronelabs.com>

	* MonoDevelop.Ide.CodeTemplates/CodeTemplatePanel.cs: 
	* MonoDevelop.Ide.FindInFiles/FindInFilesDialog.cs: 
	* MonoDevelop.Ide.Gui.OptionPanels/MonoRuntimePanel.cs: 
	* MonoDevelop.Ide.Commands/ViewCommands.cs: 
	* MonoDevelop.Ide.Commands/FileCommands.cs: 
	* MonoDevelop.Ide.Commands/ToolsCommands.cs: 
	* MonoDevelop.Ide.Commands/HelpCommands.cs: 
	* MonoDevelop.Ide.Execution/ExecutionModeCommandService.cs: 
	* MonoDevelop.Ide.Gui.Dialogs/GoToDialog.cs: 
	* MonoDevelop.Ide.Gui/Document.cs: 
	* MonoDevelop.Ide.Gui/RootWorkspace.cs: 
	* MonoDevelop.Ide.Gui/ProjectOperations.cs: 
	* MonoDevelop.Ide.Gui/StatusProgressMonitor.cs: 
	* MonoDevelop.Ide.Gui/Workbench.cs: 
	* MonoDevelop.Ide.Gui/DefaultWorkbench.cs: Fix dialogs to be transient
	  to the root window or parent dialog.
