@@ -1,3 +1,9 @@
+2009-09-11  Christian Hergert  <chris@dronelabs.com>
+
+	* MonoDevelop.Ide.Gui.Dialogs/NewFileDialog.cs: Fix exception
+	  when selecting "Add to project" on new file dialog and there
+	  is no project type selected.
+
 2009-09-11  Mike Krüger  <mkrueger@novell.com>
 
 	* MonoDevelop.Ide.Gui/Document.cs: Added DocumentParsed event.
